--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ Thumbs.db
 *.rc
 /.qmake.cache
 /.qmake.stash
+android-libFemmeJournal.so-deployment-settings.json
+apk
 
 # qtcreator generated files
 *.pro.user*
