Icon for window, Windows, macOS, and Android
Closes #18
Closes #16
Closes #15

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
+icon.ico
+icon.icns
+icon-*.png
+android/res/mipmap-*
 *~
 *.autosave
 *.a
