First working debian packaging
Closes https://todo.sr.ht/~singpolyma/femmejournal/3

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ icon.ico
 icon.icns
 icon-*.png
 android/res/mipmap-*
+debian/.debhelper
+debian/femmejournal
+debian/*.substvars
+debian/*.log
+debian/files
 *~
 *.autosave
 *.a
