Switch from inkscape to a lighter dependency

--- a/.builds/fdroid.yml
+++ b/.builds/fdroid.yml
@@ -21,7 +21,7 @@ packages:
 - android-sdk-platform-23
 - curl
 - google-android-ndk-installer
-- inkscape
+- librsvg2-bin
 repositories:
   contrib: http://ftp.ca.debian.org/debian/ stable contrib
   backports: http://ftp.ca.debian.org/debian/ stretch-backports main
