mxe puts exe in release/

--- a/.builds/mxe-i686-static.yml
+++ b/.builds/mxe-i686-static.yml
@@ -8,7 +8,7 @@ tasks:
     cd FemmeJournal
     i686-w64-mingw32.static-qmake-qt5
     make
-    curl -sT FemmeJournal.exe https://transfer.sh/FemmeJournal.exe
+    curl -sT release/FemmeJournal.exe https://transfer.sh/FemmeJournal.exe
 packages:
 - curl
 - imagemagick
